# vyatsu-study-materials

Высокопроизводительные вычислительные комплексы/Контрольные работы/2/: Вопросы.txt
Высокопроизводительные вычислительные комплексы/Контрольные работы/3/: Вопросы.txt
Высокопроизводительные вычислительные комплексы/Лабораторные работы/Lab1/: code.py
Высокопроизводительные вычислительные комплексы/Лабораторные работы/Lab2/: code.py
Высокопроизводительные вычислительные комплексы/Лабораторные работы/Lab3/: code.py  Ответы на задания.txt  Ответы на тест.txt
Высокопроизводительные вычислительные комплексы/Лабораторные работы/Lab4/: code.py  Ответы на задания.txt  Ответы на тест.txt
Высокопроизводительные вычислительные комплексы/Лабораторные работы/Lab5/: code.py  Ответы на задания.txt  Ответы на тест.txt
Высокопроизводительные вычислительные комплексы/Лабораторные работы/Lab8/Source code/: CMakeLists.txt  README.md  algo.c  algo.h  main.c
Защита интеллектуальной собственности/Экзамен/: Ответы.odt
Интерфейсы периферийных устройств/Зачет/: ~$Ответы.docx  Вопросы.txt
Комплекс знаний бакалавра/Курсовой проект/: Плакаты.vsdx
Комптютерная графика/Курсовой проект/: ResistorColor.apk
Математичкская логика и теория алгоритмов/Методички/: Синтез управляющих автоматов.djvu
Параллельное программирование/Лабораторные работы/Lab4/Source code/: CMakeLists.txt  algo.h  main.cpp
Предметно-ориентированные автоматизированные информационные системы/Курсовой проект/: Плакаты.vsdx
Системы обработки знаний/Экзамен/: Ответы.odt
(+1578 files in other folders)
